aggiunto profilo Mario, e sistemato problemi di stile

--- a/aboutus.html
+++ b/aboutus.html
@@ -56,7 +56,7 @@
             src="https://github.com/valeriosolito.png"
             alt="Profilo GitHub"
           />
-          <span>Valerio Solito</span>
+          <span>Valerio <br />Solito</span>
         </a>
       </div>
       <div class="avatar-container">
@@ -66,7 +66,10 @@
             src="https://github.com/pr3o.png"
             alt="Profilo GitHub"
           />
-          <span>Leonardo Preo</span>
+          <span
+            >Leonardo <br />
+            Preo</span
+          >
         </a>
       </div>
       <div class="avatar-container">
@@ -76,20 +79,20 @@
             src="https://github.com/mantomat.png"
             alt="Profilo GitHub"
           />
-          <span>Matteo Mantoan</span>
-        </a>
-      </div>
-      <!--<div class="avatar-container">
-        <a href="https://github.com/Scafu" target="_blank">
-          <img
-            class="avatar-img"
-            src="https://github.com/Scafu.png"
-            alt="Profilo GitHub"
-          />
-          <span>Alessandro Mazzariol</span>
+          <span>Matteo <br />Mantoan</span>
         </a>
       </div>
       <div class="avatar-container">
+        <a href="https://github.com/Mario1535" target="_blank">
+          <img
+            class="avatar-img"
+            src="https://github.com/Mario1535.png"
+            alt="Profilo GitHub"
+          />
+          <span>Mario De Pasquale</span>
+        </a>
+      </div>
+      <!--<div class="avatar-container">
         <a href="https://github.com/Scafu" target="_blank">
           <img
             class="avatar-img"
