Aggiunta divisione in tabelle nella pagina specifica del documento close #35

--- a/site/template_document.html
+++ b/site/template_document.html
@@ -33,30 +33,62 @@
       <div class="breadcrumbs">
         <a href="index.html">Home</a>
         <span>&gt;</span>
-        <span><!--GROUP_LIST_MARKER--></span>
+        <span><!--GROUP--></span>
       </div>
-      <h1><!--GROUP_LIST_MARKER--></h1>
+      <h1><!--GROUP--></h1>
       <div class="search-bar">
         <span class="icon">&#128269;</span>
         <input
           type="text"
           id="searchInput"
-          placeholder="Search in <!--GROUP_LIST_MARKER-->..."
+          placeholder="Search in <!--GROUP-->..."
         />
       </div>
+      <h2 class="table-h2">Documenti Esterni</h2>
       <div class="table-container">
         <table class="doc-table" id="doc-table">
           <thead class="table-header">
             <tr>
               <th data-column="title">Titolo</th>
               <th data-column="version">Versione</th>
-              <th data-column="type">Utilizzo</th>
               <th data-column="date">Ultima Modifica</th>
               <th></th>
             </tr>
           </thead>
           <tbody>
-            <!--DOCUMENTS_LIST_MARKER-->
+            <!--DOCUMENTS_LIST_ESTERNI-->
+          </tbody>
+        </table>
+      </div>
+      <h2 class="table-h2">Documenti Interni</h2>
+      <div class="table-container">
+        <table class="doc-table" id="doc-table">
+          <thead class="table-header">
+            <tr>
+              <th data-column="title">Titolo</th>
+              <th data-column="version">Versione</th>
+              <th data-column="date">Ultima Modifica</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <!--DOCUMENTS_LIST_INTERNI-->
+          </tbody>
+        </table>
+      </div>
+      <h2 class="table-h2">Slides</h2>
+      <div class="table-container">
+        <table class="doc-table" id="doc-table">
+          <thead class="table-header">
+            <tr>
+              <th data-column="title">Titolo</th>
+              <th data-column="version">Versione</th>
+              <th data-column="date">Ultima Modifica</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <!--DOCUMENTS_LIST_SLIDES-->
           </tbody>
         </table>
       </div>
