complete refactoring: site-gen script, update subgroups.

--- a/site/group.template.html
+++ b/site/group.template.html
@@ -29,70 +29,26 @@
         <a href="aboutus.html">About</a>
       </nav>
     </header>
+
     <div class="container">
       <div class="breadcrumbs">
         <a href="index.html">Home</a>
         <span>&gt;</span>
-        <span><!--GROUP--></span>
+        <span><!--GROUP_TITLE_MARKER--></span>
       </div>
-      <h1><!--GROUP--></h1>
+
+      <h1><!--GROUP_TITLE_MARKER--></h1>
       <div class="search-bar">
         <span class="icon">&#128269;</span>
         <input
           type="text"
           id="searchInput"
-          placeholder="Search in <!--GROUP-->..."
+          placeholder="Ricerca in <!--GROUP_TITLE_MARKER-->..."
         />
       </div>
-      <h2 class="table-h2">Documenti Esterni</h2>
-      <div class="table-container">
-        <table class="doc-table" id="doc-table">
-          <thead class="table-header">
-            <tr>
-              <th data-column="title">Titolo</th>
-              <th data-column="version">Versione</th>
-              <th data-column="date">Ultima Modifica</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <!--DOCUMENTS_LIST_ESTERNI-->
-          </tbody>
-        </table>
-      </div>
-      <h2 class="table-h2">Documenti Interni</h2>
-      <div class="table-container">
-        <table class="doc-table" id="doc-table">
-          <thead class="table-header">
-            <tr>
-              <th data-column="title">Titolo</th>
-              <th data-column="version">Versione</th>
-              <th data-column="date">Ultima Modifica</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <!--DOCUMENTS_LIST_INTERNI-->
-          </tbody>
-        </table>
-      </div>
-      <h2 class="table-h2">Slides</h2>
-      <div class="table-container">
-        <table class="doc-table" id="doc-table">
-          <thead class="table-header">
-            <tr>
-              <th data-column="title">Titolo</th>
-              <th data-column="version">Versione</th>
-              <th data-column="date">Ultima Modifica</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <!--DOCUMENTS_LIST_SLIDES-->
-          </tbody>
-        </table>
-      </div>
-    </div>
+
+      <!--GROUP_TABLES_MARKER-->
+
     <footer>
       <div class="footer-container">
         <div>
