--- a/site/index.template.html
+++ b/site/index.template.html
@@ -46,7 +46,7 @@
       <h2>Categorie di Documenti</h2>
       <p>Accedi velocemente in base alla categoria.</p>
       <div class="group-grid">
-        <!--GROUPS_LIST_MARKER-->
+        <!--GROUP_LIST_MARKER-->
       </div>
     </section>
     <footer>
